# WebDataCollector

./: README.md  app.py  pyproject.toml  send_email.py
static/: main.css
templates/: index.html  success.html
