[tool.poetry]
name = "WebAppCollector"
version = "0.1.0"
description = "WebApp for Data"
authors = ["Sergey Vengilevskiy <NeoVic2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
